    - build fix: libsndfile compiler flags were missing in some
      makefiles
    - fix for building with bison 3.0 (#202)
    - Mac OS X: added temporary hack allowing to spawn gigedit as callback
      on the process's main thread
    - fixed build error on newer MinGW
    - support building with older jack versions
    - support building with spaces in vst sdk path

  * general changes:
    - Refactoring: moved the independent code from
      the Gigasampler format engine to base classes
    - command line option '--profile' is currently disabled, since the
      respective profiling code is currently broken
    - Introduced support for optional environment variable
      "LINUXSAMPLER_PLUGIN_DIR" which allows to override the directory
      where the sampler shall look for instrument editor plugins
      (patch by Luis Garrido, slightly modified).
    - implemented Roland GS NRPN 1ArrH which allows to set volume per note
    - implemented Roland GS NRPN 1CrrH which allows to set pan per note
    - implemented Roland GS NRPN 1DrrH which allows to set reverb send per
      note (in this implementation of the sampler its simply hard routed to
      the 1st effect send of the sampler channel, no matter what the actual
      effect type is)
    - implemented Roland GS NRPN 1ErrH which allows to set chorus send per
      note (in this implementation of the sampler its simply hard routed to
      the 2nd effect send of the sampler channel, no matter what the actual
      effect type is)
    - implemented support for internal LADSPA effects
    - raised limit of program change queue from 100 to 512
      (as suggested by Alex Stone)
    - implemented sine LFO, pulse LFO and saw LFO
    - experimental support for per voice equalization
    - added command line option --exec-after-init
    - Introduced new C++ API method:
      EngineChannel::InstrumentFileName(int index)
      allowing to retrieve the whole list of files used for the loaded