@@ -1,0 +1,18 @@
+#include "CAHostTimeBase.cpp"
+#include "CAAUMIDIMap.cpp"
+#include "CAAUMIDIMapManager.cpp"
+#include "CAAUParameter.cpp"
+#include "CAAudioChannelLayout.cpp"
+#include "CAMutex.cpp"
+#include "CAStreamBasicDescription.cpp"
+#include "CAVectorUnit.cpp"
+#include "AUBuffer.cpp"
+#include "AUDebugDispatcher.cpp"
+#include "AUBase.cpp"
+#include "AUDispatch.cpp"
+#include "AUInputElement.cpp"
+#include "AUOutputElement.cpp"
+#include "AUScopeElement.cpp"
+#include "ComponentBase.cpp"
+#include "AUMIDIBase.cpp"
+#include "MusicDeviceBase.cpp"
