@@ -1,0 +1,3 @@
+#include "audioeffectx.cpp"
+#include "audioeffect.cpp"
+#include "vstplugmain.cpp"
